--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <!-- Add banner image -->
     <div class="banner-image">
-        <img src="Assets/images/digital-marketing-meeting.jpg" alt="Banner image: Four people are involved in social marketing business meeting." title="Social marketing plan meeting">
+        <img src="./assets/images/digital-marketing-meeting.jpg" alt="Banner image: Four people are involved in social marketing business meeting." title="Social marketing plan meeting">
     </div>
     <!-- Display main content in this website -->
     <section class="content">
